# bpsr-logs

./: .gitignore  .prettierrc  README.md  bpsr-logs.code-workspace  eslint.config.js  package-lock.json  package.json  svelte.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: RELEASE.md  build.yml
raw-game-files/0_Scripts/: 0_CleanAndCombineTable.py  2_FinalCleanup.py
raw-game-files/1_Dirty/: RecountTable.json  TalentTableEnglish.json
raw-game-files/2_Clean/: BuffTable_Clean.json  RecountTable_Clean.json  SkillTable_Clean.json
raw-game-files/3_Combined/: Combined.json  CombinedTranslated.json
raw-game-files/4_Final/: CombinedTranslatedWithManualOverrides.json  Conflicts.json  TalentTable_Clean.json
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  live.json  main.json
src-tauri/meter-data/: SkillName.json
src-tauri/src/: app.rs  build_app.rs  lib.rs  live.rs  packets.rs
src-tauri/src/blueprotobuf-lib/: Cargo.toml  build.rs
src-tauri/src/blueprotobuf-lib/src/: blueprotobuf_package.rs  lib.rs
src-tauri/src/live/: commands.rs  commands_models.rs  live_main.rs  models.rs  opcodes_models.rs  opcodes_process.rs
src-tauri/src/packets/: opcodes.rs  packet_capture.rs  packet_process.rs  tcp_reassembler.rs  utils.rs
src/lib/: bindings.ts  settings-store.ts  table-info.ts  utils.svelte.ts  utils.ts
src/lib/components/: AbbreviatedNumber.svelte  SelectedPlayerSkillsTable.svelte  abbreviated-number.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
(+38 files in other folders)
