[package]
name = "bpsr-logs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_logs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies.blueprotobuf-lib]
path = "./src/blueprotobuf-lib"

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-log = { version = "2.7.0", features = ["colored"] }
chrono = "0.4.41"
windivert = {version = "0.6.0", features = ["vendored"] }
etherparse = "0.18.2"
hex = "0.4.3"
tokio = {version = "1.47.1", features = ["macros"] }
log = "0.4.28"
bytes = "1.10.1"
zstd = "0.13.3"
byteorder = "1.5.0"
prost = "0.14.1"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = {version = "2.0.0-rc.21", features = ["typescript"] }
